--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
               run: |
                   docker run \
                     -d \
-                    --name fastapi-tdd \
+                    --name mercury-backend \
                     -e PORT=8765 \
                     -e ENVIRONMENT=dev \
                     -e DATABASE_URL=sqlite://sqlite.db \
@@ -67,10 +67,10 @@ jobs:
                     -p 5003:8765 \
                     ${{ env.IMAGE }}:latest
             - name: Pytest
-              run: docker exec fastapi-tdd python -m pytest .
+              run: docker exec mercury-backend python -m pytest .
             - name: Flake8
-              run: docker exec fastapi-tdd python -m flake8 .
+              run: docker exec mercury-backend python -m flake8 .
             - name: Black
-              run: docker exec fastapi-tdd python -m black . --check
+              run: docker exec mercury-backend python -m black . --check
             - name: isort
-              run: docker exec fastapi-tdd python -m isort . --check-only
+              run: docker exec mercury-backend python -m isort . --check-only
