--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -5,3 +5,6 @@ gunicorn==20.1.0
 requests==2.26.0
 tortoise-orm==0.17.8
 uvicorn==0.16.0
+python-multipart==0.0.5
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
