--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,12 @@
 name: Continuous Integration and Delivery
 
-on: [push]
+on:
+    push:
+        branches:
+            - main
+    pull_request:
+        branches:
+            - dev
 
 env:
     IMAGE: ghcr.io/bithuis/mercury-backend
